Perbarui Markdown Judul

--- a/TugasAI1.ipynb
+++ b/TugasAI1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<div style=\"text-align: center;\">\n",
     "  <span style=\"font-size: 30px;\">Tugas Pertemuan Ke 4 Matkul Artifisial Intelejen</span><br>\n",
-    "  <span style=\"font-size: 24px;\">Penerapan Algoritma Machine Learning untuk Prediksi Tren Ketenagakerjaan di Indonesia Pasca-COVID-19</span><br>\n",
+    "  <span style=\"font-size: 24px;\">Penerapan Algoritma Machine Learning untuk Prediksi Ketenagakerjaan di Indonesia</span><br>\n",
     "\n",
     "\n"
    ]
